# pkhex_rs

./: Cargo.toml
src/: error.rs  lib.rs
src/editing/: hidden_power.rs  mod.rs  nature_amp.rs
src/game/: basic_strings.rs  combo_item.rs  game_util.rs  mod.rs
src/game/enums/: ability.rs  ball.rs  (+12 more)
src/legality/: bin_linker_accessor.rs  legality_core.rs  mod.rs
src/moves/: mod.rs  move_info.rs  move_info_1.rs  move_info_2.rs  move_info_3.rs  move_info_4.rs  move_info_5.rs  move_info_6.rs  move_info_7.rs  move_info_7b.rs  move_info_8.rs  move_info_8a.rs  move_info_8b.rs  move_info_9.rs
src/personal_info/: mod.rs  personal_info_b2w2.rs  personal_info_bdsp.rs  personal_info_bw.rs  personal_info_g1.rs  personal_info_g2.rs  personal_info_g3.rs  personal_info_g4.rs  personal_info_gg.rs  personal_info_la.rs  personal_info_oras.rs  personal_info_sm.rs  personal_info_swsh.rs  personal_info_trait.rs  personal_info_xy.rs  personal_table.rs
src/pkm/: ck3.rs  g8pkm.rs  mod.rs  pa8.rs  pb8.rs  pk1.rs  pk3.rs  pk5.rs  pk6.rs  pk7.rs  pk8.rs  pk9.rs  pkm_trait.rs  xk3.rs
src/ribbons/: mod.rs  ribbon_has_mark.rs  ribbon_index.rs  ribbon_set_affixed.rs  ribbon_set_common_3.rs  ribbon_set_common_4.rs  ribbon_set_common_6.rs  ribbon_set_common_7.rs  ribbon_set_common_8.rs  ribbon_set_common_9.rs  ribbon_set_event_3.rs  ribbon_set_event_4.rs  ribbon_set_mark_8.rs  ribbon_set_mark_9.rs  ribbon_set_memory_6.rs
src/saves/: mod.rs  save_file.rs
src/util/: array_util.rs  combo_util.rs  date_util.rs  experience.rs  flag_util.rs  mod.rs  rand_util.rs  resource_util.rs  species_name.rs
(+282 files in other folders)
