[package]
name = "pkhex_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["gen1", "gen2", "gen3", "gen4", "gen5", "gen6", "gen7", "gen8"]
gen1 = []
gen2 = []
gen3 = []
gen4 = []
gen5 = []
gen6 = []
gen7 = []
gen8 = []

[dependencies]
no_std_io = {git = "https://github.com/SteveCookTU/no_std_io.git", rev = "2809d34" }
rand = "0.8.5"
lazy_static = "1.4.0"
time = { version = "0.3.9", features = ["macros"] }