[package]
name = "pkhex_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = "0.7.3"
rand = "0.8.5"
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf"}
lazy_static = "1.4.0"
num_enum = "0.5.7"
enum-iterator = "1.2.0"
chrono = "0.4.23"
include_dir = { version = "0.7.3", features = ['glob'] }